Various changes and developments to template

--- a/latex_template/template.tex
+++ b/latex_template/template.tex
@@ -1,12 +1,12 @@
 \documentclass{report}
 
-\input{preamble}
-\input{macros}
-\input{letterfonts}
+\input{../../latex_template/preamble}
+\input{../../latex_template/macros}
+\input{../../latex_template/letterfonts}
 
-\title{\Huge{Some Class}\\Random Examples}
-\author{\huge{Your Name}}
-\date{}
+\title{\Huge{MATH1061}\\Discrete Mathematics I}
+\author{\huge{Michael Kasumagic, s4430266}}
+\date{\huge{Semester 2, 2024}}
 
 \begin{document}
 
@@ -17,9 +17,33 @@
 \tableofcontents
 \pagebreak
 
-\chapter{}
+\chapter{Week 1}
+\section{Lecture 1}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\pagebreak
+\chapter{template.tex - Delete later!}
 \section{Random Examples}
-\dfn{Limit of Sequence in $\bs{\bbR}$}{Let $\{s_n\}$ be a sequence in $\bbR$. We say $$\lim_{n\to\infty}s_n=s$$ where $s\in\bbR$ if $\forall$ real numbers $\eps>0$ $\exists$ natural number $N$ such that for $n>N$ $$s-\eps<s_n<s+\eps\text{ i.e. }|s-s_n|<\eps$$}
+\dfn{Limit of Sequence in $\bbR$}{Let $\{s_n\}$ be a sequence in $\bbR$. We say $$\lim_{n\to\infty}s_n=s$$ where $s\in\bbR$ if $\forall$ real numbers $\eps>0$ $\exists$ natural number $N$ such that for $n>N$ $$s-\eps<s_n<s+\eps\text{ i.e. }|s-s_n|<\eps$$}
 \qs{}{Is the set ${x-}$axis${\setminus\{\text{Origin}\}}$ a closed set}
 \sol We have to take its complement and check whether that set is a open set i.e. if it is a union of open balls
 \nt{We will do topology in Normed Linear Space  (Mainly $\bbR^n$ and occasionally $\bbC^n$)using the language of Metric Space}
