--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -1,11 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % PACKAGE IMPORTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \usepackage[tmargin=2cm,rmargin=1in,lmargin=1in,margin=0.85in,bmargin=2cm,footskip=.2in]{geometry}
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
-\usepackage[varbb]{newpxmath}
 \usepackage{xfrac}
 \usepackage[makeroom]{cancel}
 \usepackage{mathtools}
@@ -44,19 +41,41 @@
 \usepackage{tikzsymbols}
 \renewcommand\qedsymbol{$\Laughey$}
 
+%%
+%% Julia definition (c) 2014 Jubobs
+%%
+\lstdefinelanguage{Julia}%
+  {morekeywords={abstract,break,case,catch,const,continue,do,else,elseif,%
+      end,export,false,for,function,immutable,import,importall,if,in,%
+      macro,module,otherwise,quote,return,switch,true,try,type,typealias,%
+      using,while},%
+   sensitive=true,%
+   alsoother={$},%
+   morecomment=[l]\#,%
+   morecomment=[n]{\#=}{=\#},%
+   morestring=[s]{"}{"},%
+   morestring=[m]{'}{'},%
+}[keywords,comments,strings]%
+
+\lstset{%
+    language        	= Julia,
+    basicstyle      	= \ttfamily,
+    keywordstyle    	= \bfseries\color{blue},
+    stringstyle     	= \color{magenta},
+    commentstyle    	= \color{ForestGreen},
+    showstringspaces	= false,
+		numbers						= left,
+		tabsize						= 4,
+}
 
 %\usepackage{import}
 %\usepackage{xifthen}
 %\usepackage{pdfpages}
 %\usepackage{transparent}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SELF MADE COLORS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
 \definecolor{myg}{RGB}{56, 140, 70}
 \definecolor{myb}{RGB}{45, 111, 177}
 \definecolor{myr}{RGB}{199, 68, 64}
@@ -79,16 +98,14 @@
 \definecolor{myexercisebg}{HTML}{F2FBF8}
 \definecolor{myexercisefg}{HTML}{88D6D1}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TCOLORBOX SETUPS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\setlength{\parindent}{0pt}
 
-\setlength{\parindent}{1cm}
 %================================
 % THEOREM BOX
 %================================
-
 \tcbuselibrary{theorems,skins,hooks}
 \newtcbtheorem[number within=section]{Theorem}{Theorem}
 {%
@@ -186,11 +203,9 @@
 }
 {th}
 
-
 %================================
 % LENMA
 %================================
-
 \tcbuselibrary{theorems,skins,hooks}
 \newtcbtheorem[number within=section]{Lenma}{Lenma}
 {%
@@ -231,11 +246,9 @@
 }
 {th}
 
-
 %================================
 % PROPOSITION
 %================================
-
 \tcbuselibrary{theorems,skins,hooks}
 \newtcbtheorem[number within=section]{Prop}{Proposition}
 {%
@@ -276,11 +289,9 @@
 }
 {th}
 
-
 %================================
 % CLAIM
 %================================
-
 \tcbuselibrary{theorems,skins,hooks}
 \newtcbtheorem[number within=section]{claim}{Claim}
 {%
@@ -301,12 +312,9 @@
 }
 {th}
 
-
-
 %================================
 % Exercise
 %================================
-
 \tcbuselibrary{theorems,skins,hooks}
 \newtcbtheorem[number within=section]{Exercise}{Exercise}
 {%
@@ -350,7 +358,6 @@
 %================================
 % EXAMPLE BOX
 %================================
-
 \newtcbtheorem[number within=section]{Example}{Example}
 {%
 	colback = myexamplebg
@@ -388,7 +395,6 @@
 %================================
 % DEFINITION BOX
 %================================
-
 \newtcbtheorem[number within=section]{Definition}{Definition}{enhanced,
 	before skip=2mm,after skip=2mm, colback=red!5,colframe=red!80!black,boxrule=0.5mm,
 	attach boxed title to top left={xshift=1cm,yshift*=1mm-\tcboxedtitleheight}, varwidth boxed title*=-3cm,
@@ -430,12 +436,9 @@
 	fonttitle=\bfseries,
 	title={#2},#1}{def}
 
-
-
 %================================
 % Solution BOX
 %================================
-
 \makeatletter
 \newtcbtheorem{question}{Question}{enhanced,
 	breakable,
@@ -465,7 +468,6 @@
 %================================
 % SOLUTION BOX
 %================================
-
 \makeatletter
 \newtcolorbox{solution}{enhanced,
 	breakable,
@@ -493,7 +495,6 @@
 %================================
 % Question BOX
 %================================
-
 \makeatletter
 \newtcbtheorem{qstion}{Question}{enhanced,
 	breakable,
@@ -540,12 +541,9 @@
 	#1
 }{def}
 
-
-
 %================================
 % NOTE BOX
 %================================
-
 \usetikzlibrary{arrows,calc,shadows.blur}
 \tcbuselibrary{skins}
 \newtcolorbox{note}[1][]{%
@@ -585,8 +583,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SELF MADE COMMANDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \newcommand{\thm}[2]{\begin{Theorem}{#1}{}#2\end{Theorem}}
 \newcommand{\cor}[2]{\begin{Corollary}{#1}{}#2\end{Corollary}}
 \newcommand{\mlenma}[2]{\begin{Lenma}{#1}{}#2\end{Lenma}}
@@ -625,9 +621,6 @@
 }
 \makeatother
 
-
-
-
 \tikzset{
 	symbol/.style={
 			draw=none,
@@ -635,7 +628,6 @@
 					edge node={node [sloped, allow upside down, auto=false]{$#1$}}}
 		}
 }
-
 
 % deliminators
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
@@ -686,23 +678,22 @@
 
 % Since the amsthm package isn't loaded
 
-% I prefer the slanted \leq
-\let\oldleq\leq % save them in case they're every wanted
-\let\oldgeq\geq
-\renewcommand{\leq}{\leqslant}
-\renewcommand{\geq}{\geqslant}
+% I dot not prefer the slanted \leq ;P
+% % I prefer the slanted \leq
+% \let\oldleq\leq % save them in case they're every wanted
+% \let\oldgeq\geq
+% \renewcommand{\leq}{\leqslant}
+% \renewcommand{\geq}{\geqslant}
 
 % % redefine matrix env to allow for alignment, use r as default
 % \renewcommand*\env@matrix[1][r]{\hskip -\arraycolsep
 %     \let\@ifnextchar\new@ifnextchar
 %     \array{*\c@MaxMatrixCols #1}}
 
-
 %\usepackage{framed}
 %\usepackage{titletoc}
 %\usepackage{etoolbox}
 %\usepackage{lmodern}
-
 
 %\patchcmd{\tableofcontents}{\contentsname}{\sffamily\contentsname}{}{}
 
@@ -728,12 +719,9 @@
 %{\sffamily\contentslabel{3em}}{}{}  
 %{\hspace{0.5em}\nobreak\itshape\color{myred}\contentspage}
 
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TABLE OF CONTENTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \usepackage{tikz}
 \definecolor{doc}{RGB}{0,60,110}
 \usepackage{titletoc}
@@ -775,4 +763,3 @@
 	  \end{tikzpicture}}%
 	\@starttoc{toc}}
 \makeatother
-
