--- a/latex_template/letterfonts.tex
+++ b/latex_template/letterfonts.tex
@@ -1,178 +1,72 @@
-% Things Lie
-\newcommand{\kb}{\mathfrak b}
-\newcommand{\kg}{\mathfrak g}
-\newcommand{\kh}{\mathfrak h}
-\newcommand{\kn}{\mathfrak n}
-\newcommand{\ku}{\mathfrak u}
-\newcommand{\kz}{\mathfrak z}
-\DeclareMathOperator{\Ext}{Ext} % Ext functor
-\DeclareMathOperator{\Tor}{Tor} % Tor functor
-\newcommand{\gl}{\opname{\mathfrak{gl}}} % frak gl group
-\renewcommand{\sl}{\opname{\mathfrak{sl}}} % frak sl group chktex 6
-
-% More script letters etc.
-\newcommand{\SA}{\mathcal A}
-\newcommand{\SB}{\mathcal B}
-\newcommand{\SC}{\mathcal C}
-\newcommand{\SF}{\mathcal F}
-\newcommand{\SG}{\mathcal G}
-\newcommand{\SH}{\mathcal H}
-\newcommand{\OO}{\mathcal O}
-
-\newcommand{\SCA}{\mathscr A}
-\newcommand{\SCB}{\mathscr B}
-\newcommand{\SCC}{\mathscr C}
-\newcommand{\SCD}{\mathscr D}
-\newcommand{\SCE}{\mathscr E}
-\newcommand{\SCF}{\mathscr F}
-\newcommand{\SCG}{\mathscr G}
-\newcommand{\SCH}{\mathscr H}
-
 % Mathfrak primes
 \newcommand{\km}{\mathfrak m}
 \newcommand{\kp}{\mathfrak p}
 \newcommand{\kq}{\mathfrak q}
 
-% number sets
-\newcommand{\RR}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{R}}{\mathbb{R}^{#1}}}}
-\newcommand{\NN}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{N}}{\mathbb{N}^{#1}}}}
-\newcommand{\ZZ}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{Z}}{\mathbb{Z}^{#1}}}}
-\newcommand{\QQ}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{Q}}{\mathbb{Q}^{#1}}}}
-\newcommand{\CC}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{C}}{\mathbb{C}^{#1}}}}
-\newcommand{\PP}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{P}}{\mathbb{P}^{#1}}}}
-\newcommand{\HH}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{H}}{\mathbb{H}^{#1}}}}
-\newcommand{\FF}[1][]{\ensuremath{\ifstrempty{#1}{\mathbb{F}}{\mathbb{F}^{#1}}}}
-% expected value
-\newcommand{\EE}{\ensuremath{\mathbb{E}}}
-\newcommand{\charin}{\text{ char }}
-\DeclareMathOperator{\sign}{sign}
-\DeclareMathOperator{\Aut}{Aut}
-\DeclareMathOperator{\Inn}{Inn}
-\DeclareMathOperator{\Syl}{Syl}
-\DeclareMathOperator{\Gal}{Gal}
-\DeclareMathOperator{\GL}{GL} % General linear group
-\DeclareMathOperator{\SL}{SL} % Special linear group
+%---------------------------------------
+% Blackboard Math Fonts :-
+%---------------------------------------
+\newcommand{\bba}{\mathbb{A}}   \newcommand{\bbn}{\mathbb{N}}
+\newcommand{\bbb}{\mathbb{B}}   \newcommand{\bbo}{\mathbb{O}}
+\newcommand{\bbc}{\mathbb{C}}   \newcommand{\bbp}{\mathbb{P}}
+\newcommand{\bbd}{\mathbb{D}}   \newcommand{\bbq}{\mathbb{Q}}
+\newcommand{\bbe}{\mathbb{E}}   \newcommand{\bbr}{\mathbb{R}}
+\newcommand{\bbf}{\mathbb{F}}   \newcommand{\bbs}{\mathbb{S}}
+\newcommand{\bbg}{\mathbb{G}}   \newcommand{\bbt}{\mathbb{T}}
+\newcommand{\bbh}{\mathbb{H}}   \newcommand{\bbu}{\mathbb{U}}
+\newcommand{\bbi}{\mathbb{I}}   \newcommand{\bbv}{\mathbb{V}}
+\newcommand{\bbj}{\mathbb{J}}   \newcommand{\bbw}{\mathbb{W}}
+\newcommand{\bbk}{\mathbb{K}}   \newcommand{\bbx}{\mathbb{X}}
+\newcommand{\bbl}{\mathbb{L}}   \newcommand{\bby}{\mathbb{Y}}
+\newcommand{\bbm}{\mathbb{M}}   \newcommand{\bbz}{\mathbb{Z}}
 
 %---------------------------------------
-% BlackBoard Math Fonts :-
+% Roman Math Fonts :-
 %---------------------------------------
-
-%Captital Letters
-\newcommand{\bbA}{\mathbb{A}}	\newcommand{\bbB}{\mathbb{B}}
-\newcommand{\bbC}{\mathbb{C}}	\newcommand{\bbD}{\mathbb{D}}
-\newcommand{\bbE}{\mathbb{E}}	\newcommand{\bbF}{\mathbb{F}}
-\newcommand{\bbG}{\mathbb{G}}	\newcommand{\bbH}{\mathbb{H}}
-\newcommand{\bbI}{\mathbb{I}}	\newcommand{\bbJ}{\mathbb{J}}
-\newcommand{\bbK}{\mathbb{K}}	\newcommand{\bbL}{\mathbb{L}}
-\newcommand{\bbM}{\mathbb{M}}	\newcommand{\bbN}{\mathbb{N}}
-\newcommand{\bbO}{\mathbb{O}}	\newcommand{\bbP}{\mathbb{P}}
-\newcommand{\bbQ}{\mathbb{Q}}	\newcommand{\bbR}{\mathbb{R}}
-\newcommand{\bbS}{\mathbb{S}}	\newcommand{\bbT}{\mathbb{T}}
-\newcommand{\bbU}{\mathbb{U}}	\newcommand{\bbV}{\mathbb{V}}
-\newcommand{\bbW}{\mathbb{W}}	\newcommand{\bbX}{\mathbb{X}}
-\newcommand{\bbY}{\mathbb{Y}}	\newcommand{\bbZ}{\mathbb{Z}}
+\newcommand{\rma}{\mathrm{A}}   \newcommand{\rmn}{\mathrm{N}}
+\newcommand{\rmb}{\mathrm{B}}   \newcommand{\rmo}{\mathrm{O}}
+\newcommand{\rmc}{\mathrm{C}}   \newcommand{\rmp}{\mathrm{P}}
+\newcommand{\rmd}{\mathrm{D}}   \newcommand{\rmq}{\mathrm{Q}}
+\newcommand{\rme}{\mathrm{E}}   \newcommand{\rmr}{\mathrm{R}}
+\newcommand{\rmf}{\mathrm{F}}   \newcommand{\rms}{\mathrm{S}}
+\newcommand{\rmg}{\mathrm{G}}   \newcommand{\rmt}{\mathrm{T}}
+\newcommand{\rmh}{\mathrm{H}}   \newcommand{\rmu}{\mathrm{U}}
+\newcommand{\rmi}{\mathrm{I}}   \newcommand{\rmv}{\mathrm{V}}
+\newcommand{\rmj}{\mathrm{J}}   \newcommand{\rmw}{\mathrm{W}}
+\newcommand{\rmk}{\mathrm{K}}   \newcommand{\rmx}{\mathrm{X}}
+\newcommand{\rml}{\mathrm{L}}   \newcommand{\rmy}{\mathrm{Y}}
+\newcommand{\rmm}{\mathrm{M}}   \newcommand{\rmz}{\mathrm{Z}}
 
 %---------------------------------------
-% MathCal Fonts :-
+% Calligraphic Math Fonts :-
 %---------------------------------------
-
-%Captital Letters
-\newcommand{\mcA}{\mathcal{A}}	\newcommand{\mcB}{\mathcal{B}}
-\newcommand{\mcC}{\mathcal{C}}	\newcommand{\mcD}{\mathcal{D}}
-\newcommand{\mcE}{\mathcal{E}}	\newcommand{\mcF}{\mathcal{F}}
-\newcommand{\mcG}{\mathcal{G}}	\newcommand{\mcH}{\mathcal{H}}
-\newcommand{\mcI}{\mathcal{I}}	\newcommand{\mcJ}{\mathcal{J}}
-\newcommand{\mcK}{\mathcal{K}}	\newcommand{\mcL}{\mathcal{L}}
-\newcommand{\mcM}{\mathcal{M}}	\newcommand{\mcN}{\mathcal{N}}
-\newcommand{\mcO}{\mathcal{O}}	\newcommand{\mcP}{\mathcal{P}}
-\newcommand{\mcQ}{\mathcal{Q}}	\newcommand{\mcR}{\mathcal{R}}
-\newcommand{\mcS}{\mathcal{S}}	\newcommand{\mcT}{\mathcal{T}}
-\newcommand{\mcU}{\mathcal{U}}	\newcommand{\mcV}{\mathcal{V}}
-\newcommand{\mcW}{\mathcal{W}}	\newcommand{\mcX}{\mathcal{X}}
-\newcommand{\mcY}{\mathcal{Y}}	\newcommand{\mcZ}{\mathcal{Z}}
-
+\newcommand{\cla}{\mathcal{A}}   \newcommand{\cln}{\mathcal{N}}
+\newcommand{\clb}{\mathcal{B}}   \newcommand{\clo}{\mathcal{O}}
+\newcommand{\clc}{\mathcal{C}}   \newcommand{\clp}{\mathcal{P}}
+\newcommand{\cld}{\mathcal{D}}   \newcommand{\clq}{\mathcal{Q}}
+\newcommand{\cle}{\mathcal{E}}   \newcommand{\clr}{\mathcal{R}}
+\newcommand{\clf}{\mathcal{F}}   \newcommand{\cls}{\mathcal{S}}
+\newcommand{\clg}{\mathcal{G}}   \newcommand{\clt}{\mathcal{T}}
+\newcommand{\clh}{\mathcal{H}}   \newcommand{\clu}{\mathcal{U}}
+\newcommand{\cli}{\mathcal{I}}   \newcommand{\clv}{\mathcal{V}}
+\newcommand{\clj}{\mathcal{J}}   \newcommand{\clw}{\mathcal{W}}
+\newcommand{\clk}{\mathcal{K}}   \newcommand{\clx}{\mathcal{X}}
+\newcommand{\cll}{\mathcal{L}}   \newcommand{\cly}{\mathcal{Y}}
+\newcommand{\calm}{\mathcal{M}}  \newcommand{\clz}{\mathcal{Z}}
 
 %---------------------------------------
-% Bold Math Fonts :-
+% Fraktur  Math Fonts :-
 %---------------------------------------
-
-%Captital Letters
-\newcommand{\bmA}{\boldsymbol{A}}	\newcommand{\bmB}{\boldsymbol{B}}
-\newcommand{\bmC}{\boldsymbol{C}}	\newcommand{\bmD}{\boldsymbol{D}}
-\newcommand{\bmE}{\boldsymbol{E}}	\newcommand{\bmF}{\boldsymbol{F}}
-\newcommand{\bmG}{\boldsymbol{G}}	\newcommand{\bmH}{\boldsymbol{H}}
-\newcommand{\bmI}{\boldsymbol{I}}	\newcommand{\bmJ}{\boldsymbol{J}}
-\newcommand{\bmK}{\boldsymbol{K}}	\newcommand{\bmL}{\boldsymbol{L}}
-\newcommand{\bmM}{\boldsymbol{M}}	\newcommand{\bmN}{\boldsymbol{N}}
-\newcommand{\bmO}{\boldsymbol{O}}	\newcommand{\bmP}{\boldsymbol{P}}
-\newcommand{\bmQ}{\boldsymbol{Q}}	\newcommand{\bmR}{\boldsymbol{R}}
-\newcommand{\bmS}{\boldsymbol{S}}	\newcommand{\bmT}{\boldsymbol{T}}
-\newcommand{\bmU}{\boldsymbol{U}}	\newcommand{\bmV}{\boldsymbol{V}}
-\newcommand{\bmW}{\boldsymbol{W}}	\newcommand{\bmX}{\boldsymbol{X}}
-\newcommand{\bmY}{\boldsymbol{Y}}	\newcommand{\bmZ}{\boldsymbol{Z}}
-%Small Letters
-\newcommand{\bma}{\boldsymbol{a}}	\newcommand{\bmb}{\boldsymbol{b}}
-\newcommand{\bmc}{\boldsymbol{c}}	\newcommand{\bmd}{\boldsymbol{d}}
-\newcommand{\bme}{\boldsymbol{e}}	\newcommand{\bmf}{\boldsymbol{f}}
-\newcommand{\bmg}{\boldsymbol{g}}	\newcommand{\bmh}{\boldsymbol{h}}
-\newcommand{\bmi}{\boldsymbol{i}}	\newcommand{\bmj}{\boldsymbol{j}}
-\newcommand{\bmk}{\boldsymbol{k}}	\newcommand{\bml}{\boldsymbol{l}}
-\newcommand{\bmm}{\boldsymbol{m}}	\newcommand{\bmn}{\boldsymbol{n}}
-\newcommand{\bmo}{\boldsymbol{o}}	\newcommand{\bmp}{\boldsymbol{p}}
-\newcommand{\bmq}{\boldsymbol{q}}	\newcommand{\bmr}{\boldsymbol{r}}
-\newcommand{\bms}{\boldsymbol{s}}	\newcommand{\bmt}{\boldsymbol{t}}
-\newcommand{\bmu}{\boldsymbol{u}}	\newcommand{\bmv}{\boldsymbol{v}}
-\newcommand{\bmw}{\boldsymbol{w}}	\newcommand{\bmx}{\boldsymbol{x}}
-\newcommand{\bmy}{\boldsymbol{y}}	\newcommand{\bmz}{\boldsymbol{z}}
-
-%---------------------------------------
-% Scr Math Fonts :-
-%---------------------------------------
-
-\newcommand{\sA}{{\mathscr{A}}}   \newcommand{\sB}{{\mathscr{B}}}
-\newcommand{\sC}{{\mathscr{C}}}   \newcommand{\sD}{{\mathscr{D}}}
-\newcommand{\sE}{{\mathscr{E}}}   \newcommand{\sF}{{\mathscr{F}}}
-\newcommand{\sG}{{\mathscr{G}}}   \newcommand{\sH}{{\mathscr{H}}}
-\newcommand{\sI}{{\mathscr{I}}}   \newcommand{\sJ}{{\mathscr{J}}}
-\newcommand{\sK}{{\mathscr{K}}}   \newcommand{\sL}{{\mathscr{L}}}
-\newcommand{\sM}{{\mathscr{M}}}   \newcommand{\sN}{{\mathscr{N}}}
-\newcommand{\sO}{{\mathscr{O}}}   \newcommand{\sP}{{\mathscr{P}}}
-\newcommand{\sQ}{{\mathscr{Q}}}   \newcommand{\sR}{{\mathscr{R}}}
-\newcommand{\sS}{{\mathscr{S}}}   \newcommand{\sT}{{\mathscr{T}}}
-\newcommand{\sU}{{\mathscr{U}}}   \newcommand{\sV}{{\mathscr{V}}}
-\newcommand{\sW}{{\mathscr{W}}}   \newcommand{\sX}{{\mathscr{X}}}
-\newcommand{\sY}{{\mathscr{Y}}}   \newcommand{\sZ}{{\mathscr{Z}}}
-
-
-%---------------------------------------
-% Math Fraktur Font
-%---------------------------------------
-
-%Captital Letters
-\newcommand{\mfA}{\mathfrak{A}}	\newcommand{\mfB}{\mathfrak{B}}
-\newcommand{\mfC}{\mathfrak{C}}	\newcommand{\mfD}{\mathfrak{D}}
-\newcommand{\mfE}{\mathfrak{E}}	\newcommand{\mfF}{\mathfrak{F}}
-\newcommand{\mfG}{\mathfrak{G}}	\newcommand{\mfH}{\mathfrak{H}}
-\newcommand{\mfI}{\mathfrak{I}}	\newcommand{\mfJ}{\mathfrak{J}}
-\newcommand{\mfK}{\mathfrak{K}}	\newcommand{\mfL}{\mathfrak{L}}
-\newcommand{\mfM}{\mathfrak{M}}	\newcommand{\mfN}{\mathfrak{N}}
-\newcommand{\mfO}{\mathfrak{O}}	\newcommand{\mfP}{\mathfrak{P}}
-\newcommand{\mfQ}{\mathfrak{Q}}	\newcommand{\mfR}{\mathfrak{R}}
-\newcommand{\mfS}{\mathfrak{S}}	\newcommand{\mfT}{\mathfrak{T}}
-\newcommand{\mfU}{\mathfrak{U}}	\newcommand{\mfV}{\mathfrak{V}}
-\newcommand{\mfW}{\mathfrak{W}}	\newcommand{\mfX}{\mathfrak{X}}
-\newcommand{\mfY}{\mathfrak{Y}}	\newcommand{\mfZ}{\mathfrak{Z}}
-%Small Letters
-\newcommand{\mfa}{\mathfrak{a}}	\newcommand{\mfb}{\mathfrak{b}}
-\newcommand{\mfc}{\mathfrak{c}}	\newcommand{\mfd}{\mathfrak{d}}
-\newcommand{\mfe}{\mathfrak{e}}	\newcommand{\mff}{\mathfrak{f}}
-\newcommand{\mfg}{\mathfrak{g}}	\newcommand{\mfh}{\mathfrak{h}}
-\newcommand{\mfi}{\mathfrak{i}}	\newcommand{\mfj}{\mathfrak{j}}
-\newcommand{\mfk}{\mathfrak{k}}	\newcommand{\mfl}{\mathfrak{l}}
-\newcommand{\mfm}{\mathfrak{m}}	\newcommand{\mfn}{\mathfrak{n}}
-\newcommand{\mfo}{\mathfrak{o}}	\newcommand{\mfp}{\mathfrak{p}}
-\newcommand{\mfq}{\mathfrak{q}}	\newcommand{\mfr}{\mathfrak{r}}
-\newcommand{\mfs}{\mathfrak{s}}	\newcommand{\mft}{\mathfrak{t}}
-\newcommand{\mfu}{\mathfrak{u}}	\newcommand{\mfv}{\mathfrak{v}}
-\newcommand{\mfw}{\mathfrak{w}}	\newcommand{\mfx}{\mathfrak{x}}
-\newcommand{\mfy}{\mathfrak{y}}	\newcommand{\mfz}{\mathfrak{z}}
+\newcommand{\fka}{\mathfrak{A}}   \newcommand{\fkn}{\mathfrak{N}}
+\newcommand{\fkb}{\mathfrak{B}}   \newcommand{\fko}{\mathfrak{O}}
+\newcommand{\fkc}{\mathfrak{C}}   \newcommand{\fkp}{\mathfrak{P}}
+\newcommand{\fkd}{\mathfrak{D}}   \newcommand{\fkq}{\mathfrak{Q}}
+\newcommand{\fke}{\mathfrak{E}}   \newcommand{\fkr}{\mathfrak{R}}
+\newcommand{\fkf}{\mathfrak{F}}   \newcommand{\fks}{\mathfrak{S}}
+\newcommand{\fkg}{\mathfrak{G}}   \newcommand{\fkt}{\mathfrak{T}}
+\newcommand{\fkh}{\mathfrak{H}}   \newcommand{\fku}{\mathfrak{U}}
+\newcommand{\fki}{\mathfrak{I}}   \newcommand{\fkv}{\mathfrak{V}}
+\newcommand{\fkj}{\mathfrak{J}}   \newcommand{\fkw}{\mathfrak{W}}
+\newcommand{\fkk}{\mathfrak{K}}   \newcommand{\fkx}{\mathfrak{X}}
+\newcommand{\fkl}{\mathfrak{L}}   \newcommand{\fky}{\mathfrak{Y}}
+\newcommand{\fkm}{\mathfrak{M}}   \newcommand{\fkz}{\mathfrak{Z}}
