--- a/2024_sem2/MATH1061/notes.tex
+++ b/2024_sem2/MATH1061/notes.tex
@@ -19,15 +19,15 @@
 
 \chapter{Week 1}
 \section{Lecture 1}
-This course will run a little differently. Prior to every lecture, we must work through a set of pre-lecture problems. The goal of timetabled lectures is to discuss and learn from solving problems. \\
+This course will run a little differently. Prior to every lecture, we must work through a set of pre-lecture problems. The goal of timetabled lectures is to discuss and learn from solving problems.
 
-\subsection{What is in this course?}
+\subsection*{What is in this course?}
 \subsubsection*{Logic and set theory, methods of proof}
 Modern mathematics uses the language of set theory and the notation of logic.
 $$
 ((P \land \lnot Q) \lor (P\land Q)) \land Q \equiv P \land Q
 $$
-We will learn to read and analyse this. Historical, there was a big shift in recent history, there was a big effort to define and axiom-itise everything, such that math itself is defined rigorously. Symbolic logic is the basis for many areas of computer science. It helps us formulate mathematical ideas and proofs effectively and correctly! \\
+We will learn to read and analyse this. Historical, there was a big shift in recent history, there was a big effort to define and axiom-itise everything, such that math itself is defined rigorously. Symbolic logic is the basis for many areas of computer science. It helps us formulate mathematical ideas and proofs effectively and cobbrectly! \\
 
 \dfn{G\"odel's Incompleteness Theorem (1931)}{There exists true statements which we can not prove!}
 
@@ -87,129 +87,503 @@ So $T_3 = 7$, $T_4 = 15$, $T_5 = 31$, $T_6 = 63$. Remarkably, this is one less t
 \nt{On Wednesday we start proberly.\\ Read: \vspace{-10pt}\begin{center}Pages 23-36 (Epp, 4th) or \\ Pages 37-50 (Epp, 5th).\end{center}
 Watch the first video on UQ Extend, try the first quiz before Wednesday's lecture!}
 
+\section{Lecture 2}
+\dfn{Statement or Proposition}{A sentence that is either true or false but not both.}
+\ex{}{
+	Statements:
+	\begin{itemize}
+		\item The number 6 is a number.
+		\item $\pi>3$
+		\item Euler was born in 1707.
+	\end{itemize}
+	Not statements:
+	\begin{itemize}
+		\item How are you? (This is a question.)
+		\item Stop! (This is a command.)
+		\item She likes math. (``She'' is not well defined.)
+		\item $x^2 = 2x - 1$ ($x$ is not well defined.)
+	\end{itemize}
+}
 
+\dfn{Negation}{
+	Let $p$ be a statement. The negation is of $p$ is denoted $\lnot p$ or $\varlnot p$ and is read ``not $p$.'' It is defined as in the following truth table: 
+	\begin{center}\begin{tabular}{|c||c|}
+		\hline
+		$p$ & $\lnot p$ \\ \hline
+		T & F \\
+		F & T \\ \hline
+	\end{tabular}\end{center}
+}
 
+\dfn{Conjuction}{
+	Let $p$ and $q$ be statements. The conjuction of $p$ and $q$ is denoted $p \land q$ and is read ``$p$ and $q$.'' It is defined as in the following truth table: 
+	\begin{center}\begin{tabular}{|cc||c|}
+		\hline
+		$p$ & $q$ & $p\land q$ \\ \hline
+		T & T	& T	\\
+		T & F	& F	\\ 
+		F	& T	& F	\\
+		F & F	& F	\\\hline
+	\end{tabular}\end{center}
+}
 
+\dfn{Disjunction}{
+	Let $p$ and $q$ be statements. The disjunction of $p$ and $q$ is denoted $p \lor q$ and is read ``$p$ or $q$.'' It is defined as in the following truth table: 
+	\begin{center}\begin{tabular}{|cc||c|}
+		\hline
+		$p$ & $q$ & $p\lor q$ \\ \hline
+		T & T	& T	\\
+		T & F	& T	\\ 
+		F	& T	& T	\\
+		F & F	& F	\\\hline
+	\end{tabular}\end{center}
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-\chapter{template.tex - Delete later!}
-\section{Random Examples}
-\dfn{Limit of Sequence in $\bbR$}{Let $\{s_n\}$ be a sequence in $\bbR$. We say $$\lim_{n\to\infty}s_n=s$$ where $s\in\bbR$ if $\forall$ real numbers $\eps>0$ $\exists$ natural number $N$ such that for $n>N$ $$s-\eps<s_n<s+\eps\text{ i.e. }|s-s_n|<\eps$$}
-\qs{}{Is the set ${x-}$axis${\setminus\{\text{Origin}\}}$ a closed set}
-\sol We have to take its complement and check whether that set is a open set i.e. if it is a union of open balls
-\nt{We will do topology in Normed Linear Space  (Mainly $\bbR^n$ and occasionally $\bbC^n$)using the language of Metric Space}
-\clm{Topology}{}{Topology is cool}
-\ex{Open Set and Close Set}{
-	\begin{tabular}{rl}
-		Open Set:   & $\bullet$ $\phi$                                              \\
-		            & $\bullet$ $\bigcup\limits_{x\in X}B_r(x)$ (Any $r>0$ will do) \\[3mm]
-		            & $\bullet$ $B_r(x)$ is open                                    \\
-		Closed Set: & $\bullet$ $X,\ \phi$                                          \\
-		            & $\bullet$ $\overline{B_r(x)}$                                 \\
-		            & $x-$axis $\cup$ $y-$axis
-	\end{tabular}}
-\thm{}{If $x\in$ open set $V$ then $\exists$ $\delta>0$ such that $B_{\delta}(x)\subset V$}
-\begin{myproof}By openness of $V$, $x\in B_r(u)\subset V$
+\dfn{Logical Equivalence}{
+	Two statements, $p$ and $q$ are said to be logically equivalent if have identical truth values for every possible combination of truth values for their statement variables. This is denoted $p\equiv q$.
+}
+\ex{}{
+	$$\lnot(\lnot p)\equiv p.$$
 	\begin{center}
-		\begin{tikzpicture}
-			\draw[red] (0,0) circle [x radius=3.5cm, y radius=2cm] ;
-			\draw (3,1.6) node[red]{$V$};
-			\draw [blue] (1,0) circle (1.45cm) ;
-			\filldraw[blue] (1,0) circle (1pt) node[anchor=north]{$u$};
-			\draw (2.9,0.4) node[blue]{$B_r(u)$};
-			\draw [green!40!black] (1.7,0) circle (0.5cm) node [yshift=0.7cm]{$B_{\delta}(x)$} ;
-			\filldraw[green!40!black] (1.7,0) circle (1pt) node[anchor=west]{$x$};
-		\end{tikzpicture}
+		\begin{tabular}{|cc||c|}
+			\hline
+			$p$ & $\lnot p$ & $\lnot(\lnot p)$ \\ \hline
+			T & F & T \\
+			F & T & F \\ \hline
+		\end{tabular}
 	\end{center}
-
-	Given $x\in B_r(u)\subset V$, we want $\delta>0$ such that $x\in B_{\delta} (x)\subset B_r(u)\subset V$. Let $d=d(u,x)$. Choose $\delta $ such that $d+\delta<r$ (e.g. $\delta<\frac{r-d}{2}$)
-
-	If $y\in B_{\delta}(x)$ we will be done by showing that $d(u,y)<r$ but $$d(u,y)\leq d(u,x)+d(x,y)<d+\delta<r$$
-\end{myproof}
-
-\cor{}{By the result of the proof, we can then show...}
-\mlenma{}{Suppose $\vec{v_1}, \dots, \vec{v_n} \in \RR[n]$ is subspace of $\RR^n$.}
-\mprop{}{$1 + 1 = 2$.}
-
-\section{Random}
-\dfn{Normed Linear Space and Norm $\boldsymbol{\|\cdot\|}$}{Let $V$ be a vector space over $\bbR$ (or $\bbC$). A norm on $V$ is function $\|\cdot\|\ V\to \bbR_{\geq 0}$ satisfying \begin{enumerate}[label=\bfseries\tiny\protect\circled{\small\arabic*}]
-		\item \label{n:1}$\|x\|=0 \iff x=0$ $\forall$ $x\in V$
-		\item \label{n:2}	$\|\lambda x\|=|\lambda|\|x\|$ $\forall$ $\lambda\in\bbR$(or $\bbC$), $x\in V$
-		\item \label{n:3} $\|x+y\| \leq \|x\|+\|y\|$ $\forall$ $x,y\in V$ (Triangle Inequality/Subadditivity)
-	\end{enumerate}And $V$ is called a normed linear space.
-
-	$\bullet $ Same definition works with $V$ a vector space over $\bbC$ (again $\|\cdot\|\to\bbR_{\geq 0}$) where \ref{n:2} becomes $\|\lambda x\|=|\lambda|\|x\|$ $\forall$ $\lambda\in\bbC$, $x\in V$, where for $\lambda=a+ib$, $|\lambda|=\sqrt{a^2+b^2}$ }
-
-
-\ex{$\bs{p-}$Norm}{\label{pnorm}$V={\bbR}^m$, $p\in\bbR_{\geq 0}$. Define for $x=(x_1,x_2,\cdots,x_m)\in\bbR^m$ $$\|x\|_p=\Big(|x_1|^p+|x_2|^p+\cdots+|x_m|^p\Big)^{\frac1p}$$(In school $p=2$)}
-\textbf{Special Case $\bs{p=1}$}: $\|x\|_1=|x_1|+|x_2|+\cdots+|x_m|$ is clearly a norm by usual triangle inequality. \par
-\textbf{Special Case $\bs{p\to\infty\ (\bbR^m$ with $\|\cdot\|_{\infty})}$}: $\|x\|_{\infty}=\max\{|x_1|,|x_2|,\cdots,|x_m|\}$\\
-For $m=1$ these $p-$norms are nothing but $|x|$.
-Now exercise
-\qs{}{\label{exs1}Prove that triangle inequality is true if $p\geq 1$ for $p-$norms. (What goes wrong for $p<1$ ?)}
-\sol{\textbf{For Property \ref{n:3} for norm-2}	\subsubsection*{\textbf{When field is $\bbR:$}} We have to show\begin{align*}
-		         & \sum_i(x_i+y_i)^2\leq \left(\sqrt{\sum_ix_i^2} +\sqrt{\sum_iy_i^2}\right)^2                                       \\
-		\implies & \sum_i (x_i^2+2x_iy_i+y_i^2)\leq \sum_ix_i^2+2\sqrt{\left[\sum_ix_i^2\right]\left[\sum_iy_i^2\right]}+\sum_iy_i^2 \\
-		\implies & \left[\sum_ix_iy_i\right]^2\leq \left[\sum_ix_i^2\right]\left[\sum_iy_i^2\right]
-	\end{align*}So in other words prove $\langle x,y\rangle^2 \leq \langle x,x\rangle\langle y,y\rangle$ where
-	$$\langle x,y\rangle =\sum\limits_i x_iy_i$$
-
-	\begin{note}
-		\begin{itemize}
-			\item $\|x\|^2=\langle x,x\rangle$
-			\item $\langle x,y\rangle=\langle y,x\rangle$
-			\item $\langle \cdot,\cdot\rangle$ is $\bbR-$linear in each slot i.e. \begin{align*}
-				      \langle rx+x',y\rangle=r\langle x,y\rangle+\langle x',y\rangle	\text{ and similarly for second slot}
-			      \end{align*}Here in $\langle x,y\rangle$ $x$ is in first slot and $y$ is in second slot.
-		\end{itemize}
-	\end{note}Now the statement is just the Cauchy-Schwartz Inequality. For proof $$\langle x,y\rangle^2\leq \langle x,x\rangle\langle y,y\rangle $$ expand everything of $\langle x-\lambda y,x-\lambda y\rangle$ which is going to give a quadratic equation in variable $\lambda $ \begin{align*}
-		\langle x-\lambda y,x-\lambda y\rangle & =\langle x,x-\lambda y\rangle-\lambda\langle y,x-\lambda y\rangle                                       \\
-		                                       & =\langle x ,x\rangle -\lambda\langle x,y\rangle -\lambda\langle y,x\rangle +\lambda^2\langle y,y\rangle \\
-		                                       & =\langle x,x\rangle -2\lambda\langle x,y\rangle+\lambda^2\langle y,y\rangle
-	\end{align*}Now unless $x=\lambda y$ we have $\langle x-\lambda y,x-\lambda y\rangle>0$ Hence the quadratic equation has no root therefore the discriminant is greater than zero.
-
-	\subsubsection*{\textbf{When field is $\bbC:$}}Modify the definition by $$\langle x,y\rangle=\sum_i\overline{x_i}y_i$$Then we still have $\langle x,x\rangle\geq 0$}
-
-\section{Algorithms}
-\begin{algorithm}[H]
-\KwIn{This is some input}
-\KwOut{This is some output}
-\SetAlgoLined
-\SetNoFillComment
-\tcc{This is a comment}
-\vspace{3mm}
-some code here\;
-$x \leftarrow 0$\;
-$y \leftarrow 0$\;
-\uIf{$ x > 5$} {
-    x is greater than 5 \tcp*{This is also a comment}
+	Consider $P = \lnot(p\land q)$, $Q = \lnot p \land \lnot q$ and $R = \lnot p\lor \lnot q$.
+	\begin{center}
+		\begin{tabular}{|cc||cc||ccc|}
+			\hline
+			$p$	& $q$	& $\lnot p$	& $\lnot q$ & $P$ & $Q$ & $R$ \\ \hline
+			T	& T	& F	& F	& F	& F	& F	\\
+			T	& F	& F	& T	& T	& F	& T	\\
+			F	& T	& T	& F	& T	& F	& T	\\
+			F	& F	& T	& T	& T	& T	& T	\\ \hline
+		\end{tabular}
+	\end{center}
+	$\tf P\equiv R\not\equiv Q.$
 }
-\Else {
-    x is less than or equal to 5\;
+
+\dfn{Contradictions and Tautologies}{
+	A contradiction has truth values of false for every possible combination of its statement's truth values, and is denoted $c$ or $\bot$. A tautology has truth values of true for every possible combination of its statement's truth values, and is denoted $t$ or $\top$.
 }
-\ForEach{y in 0..5} {
-    $y \leftarrow y + 1$\;
+\ex{}{
+	\begin{multicols}{2}
+		\begin{center}
+			\begin{tabular}{|cc||c|}
+				\hline
+				$p$ & $\lnot p$ & $p \land \lnot p$ \\ \hline
+				T & F & F \\
+				F & T & F \\ \hline
+			\end{tabular}
+		\end{center}
+		$$\tf p \land \lnot p \equiv \top $$
+		\begin{center}
+			\begin{tabular}{|cc||c|}
+				\hline
+				$p$ & $\lnot p$ & $p\lor \lnot p$ \\ \hline
+				T & F & T \\
+				F & T & T \\ \hline
+			\end{tabular}
+		\end{center}
+		$$\tf p \lor \lnot p \equiv \bot $$
+	\end{multicols}
 }
-\For{$y$ in $0..5$} {
-    $y \leftarrow y - 1$\;
+
+\subsection*{Important Laws of Logical Equivalence!}
+\begin{multicols}{2}
+	\subsubsection*{De Morgan's Law}
+	\begin{align*}
+		\lnot(p\land q) \equiv \lnot p \lor \lnot q \\
+		\lnot(p\lor q) \equiv \lnot p \land \lnot q 
+	\end{align*}
+	
+	\subsubsection*{Commutativity}
+	\begin{align*}
+		p \land q \equiv q\land p \\
+		p \lor q \equiv q \lor p
+	\end{align*}
+	
+	\subsubsection*{Associativity}
+	\begin{align*}
+		p \land (q\land r) \equiv (p\land q) \land r \\
+		p \lor (q\lor r) \equiv (p\lor q) \lor r	
+	\end{align*}
+	
+	\subsubsection*{Distributivity}
+	\begin{align*}
+		p \land (q \lor r) \equiv (p\land q) \lor (p \land r) \\
+		p \lor (q \land r) \equiv (p\lor q) \land (p \lor r)
+	\end{align*}
+	
+	\subsubsection*{Double Negative}
+	$$
+		\lnot(\lnot p) \equiv p
+	$$
+	
+	\subsubsection*{Idempotent}
+	\begin{align*}
+		p \land p \equiv p \\
+		p \lor p \equiv p 
+	\end{align*}
+	
+	\subsubsection*{Absorbtion}
+	\begin{align*}
+		p \lor (p \land q) \equiv p \\
+		p \land (p \lor q) \equiv p 
+	\end{align*}
+	
+	\subsubsection*{Identity Laws}
+	\begin{align*}
+		p \land \top \equiv p \\
+		p \lor \bot \equiv p	
+	\end{align*}
+	
+	\subsubsection*{Domination}
+	\begin{align*}
+		p \lor \top \equiv \top \\
+		p \land \bot \equiv \bot
+	\end{align*}
+	
+	\subsubsection*{Negation Laws}
+	\begin{align*}
+		p \lor \lnot p \equiv \top \\
+		p \land \lnot p \equiv \bot
+	\end{align*}
+	
+	\subsubsection*{Negations}
+	\begin{align*}
+		\lnot\top\equiv\bot \\
+		\lnot\bot\equiv\top
+	\end{align*}
+\end{multicols}
+
+\ex{}{
+	Prove that $((p\land\lnot q)\lor(p\land q))\land q \equiv p\land q.$
+	\begin{align*}
+		((p\land\lnot q)\lor(p\land q))\land q &\equiv (p\land(\lnot q\lor q))\land q \tag*{\text{(Distributivity)}} \\
+			&\equiv (p\land\top)\land q \tag*{\text{(Negation Law)}} \\
+			&\equiv p\land q \tag*{\text{(Identity)}} \\
+			\tag*{\qed}
+	\end{align*}
 }
-\While{$x > 5$} {
-    $x \leftarrow x - 1$\;
+
+\subsection*{Questions}
+
+\qs{}{
+	Which of the following are statements?
+	\begin{enumerate}[label=(\alph*)]
+		\item "Is it going to rain tomobbrow?"
+		\item "She is happy."
+		\item "23 July 2024 is a Tuesday"
+		\item $x = 5y + 2$
+		\item $65 < 2$
+	\end{enumerate}
 }
-\Return Return something here\;
-\caption{what}
-\end{algorithm}
+\sol (a) No, a question. (b) No, "she" undefined. (c) Yes. (d) No, $x$, $y$ undefined. (e) Yes.
+
+\qs{}{
+	Let $p$, $q$, $r$ be statements.
+	\begin{itemize}
+		\item $p$ = ``it is cold.''
+		\item $q$ = ``it is snowing.''
+		\item $r$ = ``it is sunny.''
+	\end{itemize}
+	Translate these to symbols:
+	\begin{enumerate}[label=(\alph*)]
+		\item ``It is not cold but it is snowing.''
+		\item ``It is neither snowing nor cold, but it is sunny.''
+	\end{enumerate}
+	Translate these to English:
+	\begin{enumerate}[label=(\alph*),start=3]
+		\item $\lnot p\land q$
+		\item $(p\land q)\lor r$
+	\end{enumerate}
+}
+\sol (a) $\lnot p\land q$ (b) $\lnot p \land \lnot q \land r$ (c) ``It is not cold but it is snowing'' (d) ``It is either snowing and cold, or sunny, or it's both.''
+
+\qs{}{Construct the truth table for $(p\land \lnot q)\lor (q\land r)$}
+\sol \begin{center}
+	\begin{tabular}{|ccc||c||cc||c|}
+		\hline
+		$p$ & $q$ & $r$ & $\lnot q$ & $p\land\lnot q$ & $q\land r$ & $(p\land\lnot q)\lor(q\land r)$ \\ \hline
+		T & T & T & F & F & T & T \\
+		T & T & F & F & F & F & F \\
+		T & F & T & T & T & F & T \\
+		T & F & F & T & T & F & T \\
+		F & T & T & F & F & T & T \\
+		F & T & F & F & F & F & F \\
+		F & F & T & T & F & F & F \\
+		F & F & F & T & F & F & F \\ \hline
+	\end{tabular}
+\end{center}
+
+\qs{}{Using De Morgan's Law, write down a statement which is logically equivalent to the negation of ``5 is even and 6 is even.''}
+\sol ``5 is even and 6 is even.'' $\equiv p \land q$. The solution we want is the negation, $\lnot(p\land q)$, which, by De Morgan's Law is the same as $\lnot p \lor \lnot q$ which in English is ``5 is odd or 6 is odd.''
+
+\qs{}{
+	Show that
+	$$\lnot((\lnot p\land q) \lor (\lnot p \land \lnot q)) \equiv p$$
+	using a truth table, and by laws of logical equivalence.
+}
+\begin{center}
+	\begin{tabular}{|cc||cc||cc||c||c|}
+		\hline
+		$p$ & $q$ & $\lnot p$ & $\lnot q$ & $\lnot p\land q$ & $\lnot p\land\lnot q$ & $(\lnot p\land q) \lor (\lnot p\land\lnot q)$ & $\lnot((\lnot p\land q) \lor (\lnot p\land\lnot q))$ \\ \hline
+		T & T & F & F & F & F & F & T \\
+		T & F & F & T & F & F & F & T \\
+		F & T & T & F & T & F & T & F \\
+		F & F & T & T & F & T & T & F \\ \hline
+	\end{tabular}
+\end{center}
+$\tf\lnot((\lnot p\land q) \lor (\lnot p \land \lnot q)) \equiv p$ by exhaustion.
+\begin{align*}
+	\lnot((\lnot p\land q) \lor (\lnot p \land \lnot q)) &\equiv \lnot(\lnot p\land q) \land \lnot(\lnot p \land \lnot q) \tag*{(\text{De Morgan's Law})}\\
+		&\equiv (p\lor \lnot q) \land (p \lor q) \tag*{(\text{De Morgan's Law})} \\
+		&\equiv p \lor (q \land\lnot q) \tag*{(Distributivity)} \\
+		&\equiv p \lor \top \tag*{(Negation Law)} \\
+		&\equiv p \tag*{(Identity)} \\
+		\tag*{\qed}
+\end{align*}
+$\tf\lnot((\lnot p\land q) \lor (\lnot p \land \lnot q)) \equiv p$ by logical equivalence.
+
+\section{Lecture 3}
+\dfn{Conditional Statement}{
+	Let $p$ and $q$ be statement variables. The conditional form $p$ to $q$ is denoted $p\lthen q$, and read as ``if $p$, then $q$,'' or ``$p$ implies $q$.'' It is defined by the following truth table
+	\begin{center}
+		\begin{tabular}{|cc||c|}
+			\hline
+			$p$	&$q$	&$p\lthen q$ \\ \hline
+			T & T & T \\
+			T & F & F \\
+			F & T & T \\
+			F & F & T \\ \hline
+		\end{tabular}
+	\end{center}
+	$p$ is called the hypothesis.\\
+	$q$ is called the conclusion.
+}
+\ex{}{
+	Suppose I make you the following promise:
+	\begin{center}
+		``If you do your homework then you get a chocolate.''
+	\end{center}
+	\begin{enumerate}[label=(\alph*)]
+		\item You do not do your homework and you get a chocolate.
+		\item You do your homework and you get a chocolate.
+		\item You do your homework and you do not get a chocolate.
+		\item You do not do your homework and you do not get a chocolate.
+	\end{enumerate}
+	I only lied in scenario (c), which corresponds with $(p,q)=(F,T)$.
+}
+
+\nt{
+	$$ p\lthen q \equiv \lnot p \lor q $$
+	\begin{center}
+		\begin{tabular}{|cc||c||cc|}
+			\hline
+			$p$ &$q$ &$\lnot p$ &$\lnot p \lor q$ &$p\lthen q$ \\ \hline
+			T & T & F & T & T \\ 
+			T & F & F & F & F \\
+			F & T & T & T & T \\
+			F & F & T & T & F \\ \hline 
+		\end{tabular}
+	\end{center}
+}
+
+\dfn{Contrapositive}{
+	The contrapositive of $p\lthen q$ is $\lnot q\lthen\lnot p$.
+	\begin{center}
+		\begin{tabular}{|cc||cc||cc|}
+			\hline
+			$p$ & $q$ & $\lnot p$ & $\lnot q$ & $p\lthen q$ & $\lnot q\lthen \lnot p$ \\ \hline
+			T & T & F & F & T & T \\
+			T & F & F & T & F & F \\
+			F & T & T & F & T & T \\
+			F & F & T & T & T & T \\ \hline
+		\end{tabular}
+	\end{center}
+	$$
+		p\lthen q \equiv \lnot q \lthen \lnot p
+	$$
+}
+\ex{}{
+	The contrapositive of 
+	\begin{center}
+		``If you do your homework then you get a chocolate.''
+	\end{center}
+	Is the equivalent
+	\begin{center}
+		``If you did not get a chocolate then you did not finish your homework.''
+	\end{center}
+}
+
+\subsection*{Negation of the Conditional Statement}
+The negation of $p\lthen q$ is given by $p\land \lnot q$ and can be proved logcically.
+\begin{align*}
+	p\lthen p &\equiv \lnot p \lor q \\
+	\lnot(p\lthen p) &\equiv \lnot (\lnot p \lor q) \\
+		&\equiv \lnot (\lnot p) \land \lnot q \\
+		&\equiv p \land \lnot q 
+\end{align*}
+
+\ex{}{
+	The negation of
+	\begin{center}
+		``If today is Monday, then tomorrow is my birthday''
+	\end{center}
+	Is
+	\begin{center}
+		``Today is Monday but tomorrow is not my birthday.''
+	\end{center}
+}
+
+\dfn{Biconditional Statement}{
+	Let $p$ and $q$ be statement variables. The biconditional statement of $p$ and $q$, denoted $p\liff q$, and read ``$p$ if and only if $q$'' is defined by the following truth table
+	\begin{center}
+		\begin{tabular}{|cc||c|}
+			\hline
+			$p$	& $q$	& $p\liff q$ \\ \hline
+			T & T & T \\
+			T & F & F \\
+			F & T & F \\
+			T & T & T \\ \hline
+		\end{tabular}
+	\end{center}
+	$$p \liff q \equiv (p\lthen q) \land (q\lthen p)$$
+}
+
+\subsection*{Questions}
+\qs{}{
+	Which of the following sentences have the same meaning as ``If I am worried then I did not sleep''?
+	\begin{enumerate}[label=(\alph*)]
+		\item if I am worried then I do not sleep.
+		\item if I am not worried then I do sleep.
+		\item If I do not sleep then I am worried.
+		\item I am worried and I do sleep.
+		\item If I do sleep then I am not worried.
+		\item I am worried or I do not sleep
+		\item I do not sleep or I am not worried.
+	\end{enumerate}
+}
+\sol 
+\begin{itemize}
+	\item Original: $p\lthen \lnot q$
+	\item (a): $p \lthen \lnot q$, equivalent.
+	\item (b): $\lnot p \lthen q$, not equivalent.
+	\item (c): $\lnot q \lthen p$, not equivalent.
+	\item (d): $p\land q$, not equivalent.
+	\item (e): $q \lthen\lnot p$, equivalent, the contrapositive.
+	\item (f): $p \lor \lnot q$, not equivalent.
+	\item (g): $\lnot q \lor \lnot p$, equivalent, logically equivalent.
+\end{itemize} 
+
+\qs{}{
+	Express the operations $\lor$, $\lthen$, and $\liff$ using only $\lnot$ and $\land$.
+}
+\sol
+\begin{align*}
+	p \lor q &\equiv \lnot(\lnot (p \lor q)) \\
+		&\equiv \lnot (\lnot p \land \lnot q) \\
+	p \lthen q &\equiv \lnot p\lor q \\
+		&\equiv \lnot (\lnot (\lnot p\lor q))\\
+		&\equiv \lnot (p\land \lnot q)\\
+	p \liff q &\equiv (p\lthen q) \land (q\lthen p) \\
+		&\equiv (\lnot p\lor q) \land (\lnot q\lor p) \\
+		&\equiv \lnot(\lnot(\lnot p\lor q)) \land \lnot(\lnot(\lnot q\lor p)) \\
+		&\equiv \lnot(p\land \lnot q) \land \lnot(q\land \lnot p)
+\end{align*}
+
+\qs{Challenge}{
+	Consider the NAND operation $p\lnand q \equiv \lnot(p\land q)$ can you express $\land$, $\lor$, $\lnot$, and $\lthen$ using only $\lnand$ operations? Can you express using only $\lnot$ and $\lxor$?
+}
+\sol Generating expressions using only NANDs:
+\begin{align*}
+	\lnot p &\equiv \lnot(p \land p) \\
+		&\equiv p\lnand p \\
+	p\land q &\equiv (p\land q)\land(p\land q) \\
+		&\equiv \lnot (\lnot(p\land q)\land\lnot(p\land q)) \\
+		&\equiv \lnot((p\lnand q)\land (p\lnand q)) \\
+		&\equiv (p\lnand q)\lnand (p\lnand q) \\
+	p\lor q &\equiv \lnot(\lnot(p\lor q)) \\
+		&\equiv \lnot(\lnot p\land \lnot q) \\
+		&\equiv \lnot p\lnand\lnot q \\
+		&\equiv (p\lnand p)\lnand(q\lnand q) \\
+	p \lthen q &\equiv \lnot p\lor q \\
+		&\equiv \lnot (\lnot (\lnot p\lor q)) \\
+		&\equiv \lnot (p\land \lnot q) \\
+		&\equiv p\lnand\lnot q \\
+		&\equiv p\lnand(q\lnand q)
+\end{align*}
+These sick fucks had me testing and observing truth tables for two hours. I was suspicious at times, but I assumed there must be a solution\dots\\
+There is not. No matter how many XOR and NOT operations you apply, ultimately, you will always have 2 Falses and 2 Trues, or 4 Falses, or 4 Trues. \textbf{AHHHHHHHH}.
+
+\qs{}{
+	Show that $\lnot(p\lthen q) \not\equiv \lnot p\lthen \lnot q$.
+}
+\sol By counterexample. Suppose $p=\true\And q=\true$
+\begin{align*}
+\lnot(p\lthen q) &\equiv \lnot(\true\lthen\true) \\
+	&\equiv \lnot(\true) \\
+	&\equiv \false \\
+\lnot p\lthen\lnot q &\equiv \lnot\true\lthen\lnot\true \\
+	&\equiv \false\lthen\false \\
+	&\equiv \true \not\equiv\lnot(p\lthen q) \tag*{\qed}
+\end{align*}
+
+\qs{}{
+	Which of the following sentences have the opposite truth valuse as ``If I am worried then I did not sleep''?
+	\begin{enumerate}[label=(\alph*)]
+		\item if I am worried then I do not sleep.
+		\item if I am not worried then I do sleep.
+		\item If I do not sleep then I am worried.
+		\item I am worried and I do sleep.
+		\item If I do sleep then I am not worried.
+		\item I am worried or I do not sleep
+		\item I do not sleep or I am not worried.
+	\end{enumerate}
+}
+\sol 
+\begin{itemize}
+	\item Original: $p\lthen \lnot q$
+	\item (a): $p \lthen \lnot q$, No, equivalent statement.
+	\item (b): $\lnot p \lthen q$, No, True 3/4 times, same as our statement. Not possible to be opposite.
+	\item (c): $\lnot q \lthen p$, No, True 3/4 times.
+	\item (d): $p\land q$, Yes! $p\lthen\lnot q \equiv \lnot p\lor \lnot q\equiv \lnot(p\land q)$, exactly the opposite.
+	\item (e): $q \lthen\lnot p$, No, equivalent statement.
+	\item (f): $p \lor \lnot q$, No, True 3/4 times.
+	\item (g): $\lnot q \lor \lnot p$, No, equivalent statement.
+\end{itemize} 
+
+\qs{}{
+	Show that $$p\lthen(q\lor r)\equiv (p\land\lnot q)\lthen r.$$
+}
+\sol
+\begin{align*}
+	p\lthen (q\lor r) &\equiv \lnot p \lor (q\lor r) \\
+		&\equiv (\lnot p \lor q)\lor r \\
+		&\equiv \lnot(\lnot(\lnot p \lor q))\lor r \\
+		&\equiv \lnot(p \land\lnot q)\lor r \\
+		&\equiv (p\land q)\lthen r
+\end{align*}
+
+\qs{}{
+	Let $n$ be a positive integer. Find conditions that are:
+	\begin{enumerate}[label=(\alph*)]
+		\item necessary, but not sufficent for $n$ to be a multiple of 10.
+		\item sufficient but not necessary for $n$ to be divisible by 10.
+		\item necessary and sufficient for $n$ to be divisible by 10.
+	\end{enumerate}
+}
+\sol\begin{enumerate}[label=(\alph*)]
+	\item $n$ is a multiple of 10 $\lthen$ $n$ is necessarily even.
+	\item $n$ is a multiple of 50 $\lthen$ sufficient to conclude that $n$ is divisible by 10.
+	\item $n$'s last digit is a 0 $\liff$ $n$ is divisible by 10.
+\end{enumerate}
+
+\chapter{Week 2}
+\section{Lecture 4}
 
 \end{document}
